Diploma-Project-2023/diploma-project-back-end/k8s/zipkin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: monitoring
  labels:
    app: zipkin
spec:
  selector:
    app: zipkin
  type: ClusterIP
  ports:
    # DEFAULT PORT 9411
    - port: 9411
      # DEFAULT PORT 9411
      targetPort: 9411
#      protocol: TCP
